@@ -1,6 +1,9 @@
 package org.shagnik.backend.service;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j; // NEW
+import org.shagnik.backend.dto.CachedPost;
 import org.shagnik.backend.dto.CreatePostRequest;
 import org.shagnik.backend.dto.FeedItemResponse;
 import org.shagnik.backend.dto.PostResponse;
@@ -21,12 +24,14 @@ import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
+@Slf4j // NEW — replaces the System.out.println calls
 @RequiredArgsConstructor
 @Service
 public class PostService {
 
     private static final int MAX_TAGS = 5;
     private static final long LOCK_DURATION_HOURS = 48;
+    private static final long POST_CACHE_TTL_SECONDS = 600;
 
     private final PostRepository postRepository;
     private final TagRepository tagRepository;
@@ -38,20 +43,22 @@ public class PostService {
     private final NotificationRepository notificationRepository;
     private final VoteRepository voteRepository;
     private final S3Client s3Client;
+    private final ObjectMapper objectMapper;
+    private final RedisService redisService;
 
     @Value("${aws.s3_bucket}")
     private String bucketName;
 
-
+    // FIX: was private — SettlementService now needs this key format for Phase 8 eviction
+    public static String postCacheKey(UUID postId) {
+        return "post:" + postId;
+    }
 
     @Transactional
     public PostResponse createPost(String username, CreatePostRequest request) {
         User poster = authService.getCurrentUser(username);
-
         validateImageKey(request.getImageKey());
-
         Set<Tag> tags = resolveTags(request.getTags());
-
         LocalDateTime now = LocalDateTime.now();
 
         Post post = new Post();
@@ -82,9 +89,6 @@ public class PostService {
         if (rawTags == null || rawTags.isEmpty()) {
             return new HashSet<>();
         }
-
-        // Normalize (trim + lowercase) and dedupe within this request.
-        // LinkedHashSet preserves insertion order for predictable behavior.
         Set<String> normalizedNames = rawTags.stream()
                 .filter(Objects::nonNull)
                 .map(String::trim)
@@ -96,7 +100,6 @@ public class PostService {
             throw new TagLimitExceededException("A post can have at most " + MAX_TAGS + " tags");
         }
 
-        // Reuse existing tags in one batch query; only create what's missing.
         List<Tag> existingTags = tagRepository.findByNameIn(normalizedNames);
         Map<String, Tag> existingByName = existingTags.stream()
                 .collect(Collectors.toMap(Tag::getName, t -> t));
@@ -112,33 +115,108 @@ public class PostService {
         return result;
     }
 
+    // ============ PHASE 4: ID-projection + bulk cache lookup ============
+
     @Transactional
     public Page<FeedItemResponse> getOpenFeed(Pageable pageable) {
-        Page<Post> page = postRepository.findByStatusOrderByLockAtAsc(PostStatus.OPEN, pageable);
-        page.forEach(settlementService::autoSettleIfNeeded);
-
-        List<FeedItemResponse> items = page.getContent().stream()
-                .filter(p -> p.getStatus() == PostStatus.OPEN) // exclude any that just flipped to SETTLED
-                .map(this::toFeedItemResponse)
-                .collect(Collectors.toList());
-
-        return new PageImpl<>(items, pageable, page.getTotalElements());
+        Page<UUID> idPage = postRepository.findIdsByStatusOrderByLockAtAsc(PostStatus.OPEN, pageable);
+        return buildFeedFromIds(idPage);
     }
 
     @Transactional
     public Page<FeedItemResponse> getSettledFeed(Pageable pageable) {
-        Page<Post> page = postRepository.findByStatusOrderBySettledAtDesc(PostStatus.SETTLED, pageable);
-        // Already SETTLED — this call is a safe no-op, kept only for consistency with getOpenFeed.
-        page.forEach(settlementService::autoSettleIfNeeded);
-        return page.map(this::toFeedItemResponse);
+        Page<UUID> idPage = postRepository.findIdsByStatusOrderBySettledAtDesc(PostStatus.SETTLED, pageable);
+        return buildFeedFromIds(idPage);
     }
+
+    private Page<FeedItemResponse> buildFeedFromIds(Page<UUID> idPage) {
+        List<UUID> ids = idPage.getContent();
+        if (ids.isEmpty()) {
+            return new PageImpl<>(List.of(), idPage.getPageable(), idPage.getTotalElements());
+        }
+
+        List<String> keys = ids.stream().map(PostService::postCacheKey).toList();
+        List<String> cachedValues = redisService.mget(keys); // same order as `keys`/`ids`
+
+        List<FeedItemResponse> items = new ArrayList<>(ids.size());
+
+        for (int i = 0; i < ids.size(); i++) {
+            UUID id = ids.get(i);
+            CachedPost dto = tryDeserialize(cachedValues.get(i), id);
+
+            if (dto != null) {
+                boolean settlementPossiblyDue =
+                        dto.status() == PostStatus.OPEN
+                                && dto.lockAt() != null
+                                && dto.lockAt().isBefore(LocalDateTime.now());
+
+                if (!settlementPossiblyDue) {
+                    items.add(toFeedItemResponse(dto));
+                    continue;
+                }
+                // else: lockAt passed, cache might be stale — fall through to DB check below
+            }
+
+            Post post = postRepository.findById(id).orElse(null);
+            if (post == null) continue; // deleted between id-query and now; skip silently
+
+            post = settlementService.autoSettleIfNeeded(post); // mutates + returns same reference
+            CachedPost freshDto = toCachedPost(post);
+            cachePost(id, freshDto);
+            items.add(toFeedItemResponse(freshDto));
+        }
+
+        return new PageImpl<>(items, idPage.getPageable(), idPage.getTotalElements());
+    }
+
+    // ============ PHASE 5 (fixed): Post details ============
 
     @Transactional
     public PostResponse getPostById(UUID id) {
+        String cacheKey = postCacheKey(id);
+        CachedPost dto = tryDeserialize(redisService.get(cacheKey), id);
+
+        if (dto != null) {
+            boolean settlementPossiblyDue =
+                    dto.status() == PostStatus.OPEN
+                            && dto.lockAt() != null
+                            && dto.lockAt().isBefore(LocalDateTime.now());
+
+            if (!settlementPossiblyDue) {
+                return toPostResponse(dto);
+            }
+        }
+
         Post post = postRepository.findById(id)
                 .orElseThrow(() -> new PostNotFoundException(id.toString()));
+
+        // FIX: autoSettleIfNeeded mutates `post` in place and returns it — never null,
+        // so there's no reason to re-fetch from the DB afterward. Just reassign.
         post = settlementService.autoSettleIfNeeded(post);
-        return toPostResponse(post);
+
+        CachedPost freshDto = toCachedPost(post);
+        cachePost(id, freshDto);
+        return toPostResponse(freshDto);
+    }
+
+    // ============ Shared cache helpers ============
+
+    private CachedPost tryDeserialize(String json, UUID postId) {
+        if (json == null) return null;
+        try {
+            return objectMapper.readValue(json, CachedPost.class);
+        } catch (Exception e) {
+            log.warn("Failed to deserialize cached post {}: {}", postId, e.getMessage());
+            return null;
+        }
+    }
+
+    private void cachePost(UUID postId, CachedPost dto) {
+        try {
+            redisService.setex(postCacheKey(postId), POST_CACHE_TTL_SECONDS, objectMapper.writeValueAsString(dto));
+        } catch (Exception e) {
+            log.warn("Failed to cache post {}: {}", postId, e.getMessage());
+        }
     }
 
     @Transactional
@@ -162,8 +240,7 @@ public class PostService {
             throw new ForbiddenActionException("You cannot delete another user's post");
         }
 
-        List<UUID> captionIds = captionRepository.findIdsByPostId(postId); // <-- ID projection, not entities to prevent
-        // transient entities error by hibernate
+        List<UUID> captionIds = captionRepository.findIdsByPostId(postId);
 
         if (!captionIds.isEmpty()) {
             voteRepository.deleteByCaptionIdIn(captionIds);
@@ -175,50 +252,60 @@ public class PostService {
         reportRepository.deleteByTargetTypeAndTargetId(ReportTargetType.POST, postId);
 
         postRepository.delete(post);
+        redisService.del(postCacheKey(postId)); // Phase 8: post no longer exists, evict
     }
 
-    public PostResponse toPostResponse(Post post) {
+    // ============ Mappers ============
+
+    private CachedPost toCachedPost(Post post) {
+        Caption winner = post.getWinningCaption();
         List<String> tagNames = post.getTags().stream()
                 .map(Tag::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
 
-        String winningText = null;
-        String winningAuthor = null;
-        if (post.getStatus() == PostStatus.SETTLED && post.getWinningCaptionId() != null) {
-            Caption winner = captionRepository.findById(post.getWinningCaptionId()).orElse(null);
-            if (winner != null) {
-                winningText = winner.getText();
-                winningAuthor = winner.getAuthor().getUsername();
-            }
-        }
+        return new CachedPost(
+                post.getId(),
+                post.getPoster().getId(),
+                post.getPoster().getUsername(),
+                post.getImageKey(),
+                post.getTitle(),
+                post.getStatus(),
+                post.getCreatedAt(),
+                post.getLockAt(),
+                post.getSettledAt(),
+                winner != null ? winner.getId() : null,
+                winner != null ? winner.getText() : null,
+                winner != null ? winner.getAuthor().getUsername() : null,
+                tagNames
+        );
+    }
 
+    private PostResponse toPostResponse(CachedPost dto) {
         return new PostResponse(
-                post.getId(), post.getPoster().getId(), post.getPoster().getUsername(),
-                post.getImageKey(), post.getTitle(), post.getStatus(),
-                post.getCreatedAt(), post.getLockAt(), post.getSettledAt(),
-                post.getWinningCaptionId(), winningText, winningAuthor, tagNames);
+                dto.id(), dto.posterId(), dto.posterUsername(), dto.imageKey(), dto.title(),
+                dto.status(), dto.createdAt(), dto.lockAt(), dto.settledAt(),
+                dto.winningCaptionId(), dto.winningCaptionText(), dto.winningCaptionAuthor(), dto.tags()
+        );
     }
 
-    private FeedItemResponse toFeedItemResponse(Post post) {
-        List<String> tagNames = post.getTags().stream()
-                .map(Tag::getName)
-                .sorted()
-                .collect(Collectors.toList());
+    // FIX: was hand-duplicating the winner lookup (and NPE-ing on settle-with-no-winner).
+    // Now delegates to toCachedPost, which already null-checks the winner.
+    public PostResponse toPostResponse(Post post) {
+        return toPostResponse(toCachedPost(post));
+    }
 
-        String winningText = null;
-        String winningAuthor = null;
-        if (post.getStatus() == PostStatus.SETTLED && post.getWinningCaptionId() != null) {
-            Caption winner = captionRepository.findById(post.getWinningCaptionId()).orElse(null);
-            if (winner != null) {
-                winningText = winner.getText();
-                winningAuthor = winner.getAuthor().getUsername();
-            }
-        }
-
+    // Note: FeedItemResponse has NO posterId field (unlike PostResponse) — confirmed
+    // from your actual constructor, so this mapper deliberately omits it.
+    private FeedItemResponse toFeedItemResponse(CachedPost dto) {
         return new FeedItemResponse(
-                post.getId(), post.getPoster().getUsername(), post.getImageKey(),
-                post.getTitle(), post.getStatus(), post.getCreatedAt(), post.getLockAt(),
-                post.getSettledAt(), post.getWinningCaptionId(), winningText, winningAuthor, tagNames);
+                dto.id(), dto.posterUsername(), dto.imageKey(), dto.title(),
+                dto.status(), dto.createdAt(), dto.lockAt(), dto.settledAt(),
+                dto.winningCaptionId(), dto.winningCaptionText(), dto.winningCaptionAuthor(), dto.tags()
+        );
     }
+
+    // toFeedItemResponse(Post) is no longer called anywhere in this class — the old
+    // getOpenFeed/getSettledFeed that used it are gone, replaced by buildFeedFromIds above.
+    // Delete it, UNLESS some other class calls it directly (grep to confirm before removing).
 }
